--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4.8.0"
+serde = "1.0.204"
+serde_json = "1.0.120"
+env_logger = "0.11.3"
+dotenv = "0.15.0"
+lazy_static = "1.5.0"
