--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,6 @@ serde_json = "1.0.120"
 env_logger = "0.11.3"
 dotenv = "0.15.0"
 lazy_static = "1.5.0"
+sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
+sea-orm-cli = "0.12.15"
+migration = { path = "migration" }
