Update crud user

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ dotenv = "0.15.0"
 lazy_static = "1.5.0"
 sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 sea-orm-cli = "0.12.15"
+futures = "0.3"
 entity = { path = "entity" }
 migration = { path = "migration" }
 sha256 = "1.5.0"
