--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -24,3 +24,5 @@ actix-rt = "2.10.0"
 rand = "0.8.5"
 num-traits = "0.2.19"
 rust_decimal = "1.35.0"
+tokio-cron-scheduler = "0.11.0"
+tokio = "1.39.2"
