--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bitnoi.se/react-scheduler": "^0.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -21,12 +22,14 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.3",
     "@tanstack/react-table": "^8.20.1",
+    "@types/react-big-calendar": "^1.8.9",
     "antd": "^5.20.1",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
@@ -35,9 +38,11 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.12",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-big-calendar": "^1.13.2",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
@@ -50,13 +55,13 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
