--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -3,6 +3,10 @@ name = "backend"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "backend"
+path = "src/main.rs"
+
 [dependencies]
 actix-web = "4.8.0"
 serde = "1.0.204"
